error : error with lv_printf.h

--- a/MDK-ARM/stm32f411_lvgl_port.uvprojx
+++ b/MDK-ARM/stm32f411_lvgl_port.uvprojx
@@ -846,6 +846,11 @@
               <FilePath>..\middleware\lvgl\src\misc\lv_anim.c</FilePath>
             </File>
             <File>
+              <FileName>lv_anim_timeline.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\misc\lv_anim_timeline.c</FilePath>
+            </File>
+            <File>
               <FileName>lv_area.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\middleware\lvgl\src\misc\lv_area.c</FilePath>
@@ -1021,11 +1026,6 @@
               <FilePath>..\middleware\lvgl\src\widgets\lv_textarea.c</FilePath>
             </File>
             <File>
-              <FileName>lv_extra.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\middleware\lvgl\src\extra\lv_extra.c</FilePath>
-            </File>
-            <File>
               <FileName>lv_flex.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\middleware\lvgl\src\extra\layouts\flex\lv_flex.c</FilePath>
@@ -1034,6 +1034,66 @@
               <FileName>lv_grid.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\middleware\lvgl\src\extra\layouts\grid\lv_grid.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_bmp.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\bmp\lv_bmp.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_freetype.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\freetype\lv_freetype.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_fs_fatfs.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\fs\lv_fs_fatfs.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_fs_posix.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\fs\lv_fs_posix.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_fs_stdio.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\fs\lv_fs_stdio.c</FilePath>
+            </File>
+            <File>
+              <FileName>gifdec.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\gif\gifdec.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_gif.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\gif\lv_gif.c</FilePath>
+            </File>
+            <File>
+              <FileName>lodepng.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\png\lodepng.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_png.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\png\lv_png.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_sjpg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\sjpg\lv_sjpg.c</FilePath>
+            </File>
+            <File>
+              <FileName>tjpgd.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\libs\sjpg\tjpgd.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_snapshot.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\others\snapshot\lv_snapshot.c</FilePath>
             </File>
             <File>
               <FileName>lv_theme_basic.c</FileName>
@@ -1139,6 +1199,11 @@
               <FileName>lv_win.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\middleware\lvgl\src\extra\widgets\win\lv_win.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_extra.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\middleware\lvgl\src\extra\lv_extra.c</FilePath>
             </File>
           </Files>
         </Group>
